# groceries-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.template  grocery.txt  implementation_plan.md  pyproject.toml
.clinerules/: grocery-project-guidelines.md
.clinerules/workflows/: push.md
.github/workflows/: pylint.yml
mcp_groceries_server/agent/: Dockerfile  api.py  example.py  groceries_agent.py  variables.py
mcp_groceries_server/agent/docs/: README.md
mcp_groceries_server/server/: __init__.py  mcp_server.py  types.py
mcp_groceries_server/server/docs/: README.md
mcp_groceries_server/server/prompts/: __init__.py  shopping_prompts.py
mcp_groceries_server/server/providers/docs/: README.md
mcp_groceries_server/server/providers/interface/: provider.py
mcp_groceries_server/server/providers/keshet/: _service.py  tools.py
mcp_groceries_server/server/providers/rami_levy/: _service.py  _types.py  tools.py
mcp_groceries_server/server/providers/shufersal/: _service.py  tools.py
tests/: test_api.py  test_shufersal_service.py
